tests/NormalTests/paczka1/fuzzy1/46283079.err
Error in line 5: shLhIwsotB9 A741 78,3
Error in line 9: etbiiw2 A741 18,6
Error in line 6: shLhIwsotB9 S912 8,5
Error in line 10: KficDiHmBin S28 58,2
Error in line 1: S28 S912 27,8
Error in line 3: zuoz2Y A577 65,3
Error in line 27: S28 S28 12,9
